--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-3-card": "^0.2.0",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-made-with-love": "^1.0.1",
     "react-redux": "^7.2.0",
